welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: '=' expected but identifier found.
def lire() Int:{
           ^Array2:28: error: illegal start of simple expression
def posInit(){
^