welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var T = new Array[Color](getMondeHauteur())
  for (i<- 1 to getMondeHauteur()){
    T(i-1)= getCouleurSol()
    avance()
  }
  gauche();avance();droite()
  for(i<-1 to (getMondeLargeur()-2)){
    val decal = lire()
    setCouleurBrosse(T((5+decal)%6))
    baisseBrosse()
    leveBrosse()
    for(j <- 0 to (getMondeHauteur()-1)){
      avance()
      setCouleurBrosse(T((j+decla)%6))
      baisseBrosse()
      leveBrosse()
      
    }
    posInit()
  }
}

def lire() Int:{
  val decalage = litMessage().toInt
  return decalage
}
def posInit(){
  droite();droite()
  for(i<- 1 to (getMondeHauteur()-1)){
    avance()
  }
  droite()
  avance()
  droite()
}